# RXNEmb

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
notebook/: figure3.py  reproduce_notes.md
rxnemb/: __init__.py  data.py  eval.py  ext_feat.py  layer.py  model.py  rxn_emb.py  scheduler.py  train.py  utils.py
src/rxnemb/: data.py  layer.py  model.py  rxn_emb.py  train.py  utils.py
src/rxnemb/core/: data.py  rxn_emb.py  train.py  utils.py
